@@ -5,7 +5,7 @@
   "homepage": "http://github.com/JohnDoh/Roundcube-Plugin-Context-Menu/",
   "license": "GPL-3.0",
   "type": "roundcube-plugin",
-  "version": "2.2",
+  "version": "2.2.1",
   "authors": [
     {
       "name": "Philip Weir",
@@ -25,7 +25,7 @@
   },
   "extra": {
     "roundcube": {
-      "min-version": "1.3-beta"
+      "min-version": "1.3-git"
     }
   }
 }
