@@ -1,6 +1,8 @@
 Roundcube Webmail ContextMenu
 =============================
 
+ * Remove special handling for group-create/rename (requires roundcube rev ec98aa5)
+
 Version 2.2 (2017-01-02, rc-1.3)
 =================================================
  * Use new 'Mark all as read' function from core (requires 1.3)
